8th commit - try to fix button bugs on iPhone

--- a/styles/main.css
+++ b/styles/main.css
@@ -224,8 +224,10 @@ h1 {
 }
 
 .btn svg {
-	width: 100%;
-	height: 100%;
+	/* width: 100%; */
+	/* height: 100%; */
+	width: 40px;
+	height: 40px;
 }
 
 .btn:hover {
@@ -502,6 +504,10 @@ input[type='submit']:hover {
 
 /* ----------------- Responsive code ----------------- */
 @media (max-width: 768px) {
+	body {
+		overflow: auto;
+	}
+
 	.header {
 		padding: 30px 0;
 	}
